--- a/about.html
+++ b/about.html
@@ -13,7 +13,8 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
-    <title>About Nahoko Park</title>
+    <title>About Nahoko Park-Front-end developer</title>
+    <meta name="discription" content="Introducing Nahoko Park" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -44,7 +45,7 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center">About me</h1>
+    <h1 class="text-center">About Me</h1>
     <h3 class="text-center">Front-end developer from Japan🍣</h3>
     <div class="about-paragraphs text-center">
       <p>
@@ -57,19 +58,28 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="src/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="src/yoga.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="Screenshot of yoga app" />
         </div>
         <div class="col-sm-4">
-          <img src="src/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="src/weather.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="Screenshot of weather app" />
         </div>
         <div class="col-sm-4">
-          <img src="src/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="src/yogurt.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="Screenshot of yogurt app" />
         </div>
       </div>
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:hello.com" class="email-link"> hello.com </a>
+      <a href="mailto:hello.com" class="email-link" title="Contact Information"> hello.com </a>
     </div>
   </body>
 </html>
