--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
+    <title>Nahoko Park Homepage-Front-end developer</title>
+    <meta name="discription" content="Welcome to Nahoko Park's Homepage" />
   </head>
-  <title>Homepage</title>
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
@@ -56,7 +58,10 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="src/yoga.png" class="img-fluid rounded" />
+          <img
+            src="src/yoga.png"
+            class="img-fluid rounded"
+            alt="Screenshot of yoga app" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -67,7 +72,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Yoga App"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -81,16 +88,24 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Weather App"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-6">
-          <img src="src/weather.png" class="img-fluid rounded" />
+          <img
+            src="src/weather.png"
+            class="img-fluid rounded"
+            alt="Screenshot of weather app" />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="src/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="src/yogurt.png"
+            class="img-fluid rounded"
+            alt="Screenshot of yogurt app" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -101,7 +116,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Yogurt App"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
